# jsq

./: Cargo.toml  README.md  jogfile  tutorial.md
.github/workflows/: publish.sh  publish.yaml  publish.yml
src/: boa.rs  color.rs  deno.rs  main.rs  parse.rs  print.rs  v8.rs
tests/: test.js  tests.rs
