[package]
name = "jsq"
version = "2.5.0"
edition = "2021"
description = "A tool for evaluating a JavaScript function and printing the result."
license = "MIT"
repository = "https://github.com/callum-oakley/jsq"

[dependencies]
anyhow = "1.0.95"
boa_engine = "0.20.0"
serde_yaml = "0.9.34"
termcolor = "1.4.1"

[dependencies.clap]
version = "4.5.23"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.135"
features = ["preserve_order"]

[dependencies.toml]
version = "0.8.19"
features = ["preserve_order"]
